--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
-
+{% load rango_template_tags %}
 
 <html>
     <head lang="en">
@@ -18,7 +18,11 @@
         {% endblock %}
         </div>
 
-
+        <div> 
+            {% block sidebar_block %}
+                {% get_category_list category %}
+            {% endblock %}
+        </div>
 
         <hr />
         <div>
